--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -542,3 +542,52 @@ main {
   text-transform: uppercase;
   font-weight: 700;
 }
+
+.footer--principal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 160px;
+  padding: 0 20px 20px 20px;
+  background-color: #333333;
+}
+
+.nav--footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 35px;
+}
+.nav--footer ul li {
+  list-style: none;
+  margin-right: 50px;
+}
+.nav--footer ul a {
+  color: #fff;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.nav--social {
+  margin-left: auto;
+}
+
+ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 35px;
+}
+ul li {
+  list-style: none;
+  margin-right: 50px;
+  color: #fff;
+}
+ul a {
+  color: #fff;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
