feat: add grid layouts with simple sass mixins

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,4 +1,5 @@
 @import '../sass/bootstrap_reboot';
 @import '../sass/_globals';
+@import '../sass/grids';
 @import '../sass/_headers';
 @import '../sass/_footers';
