--- a/assets/sass/_globals.scss
+++ b/assets/sass/_globals.scss
@@ -35,11 +35,23 @@ $color-claro: #fff;
   }
 }
 
+@function calculateRem($size) {
+  $remSize: $size / 16px;
+  @return $remSize * 1rem;
+}
+
+@mixin font-size($size) {
+  font-size: $size;
+  font-size: calculateRem($size);
+  line-height: calculateRem($size) * 1.5;
+}
+
 body {
   margin: 0;
   background-color: #f9fafc;
   color: $color-primario;
   @include titulos($Fuente1);
+  @include font-size(18px);
 }
 
 main {
