--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -483,6 +483,9 @@ body {
   background-color: #f9fafc;
   color: #333333;
   font-family: "Lato", sans-serif;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
 }
 
 main {
@@ -573,19 +576,18 @@ main {
 .nav--social {
   margin-left: auto;
 }
-
-ul {
+.nav--social ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   padding-top: 35px;
 }
-ul li {
+.nav--social ul li {
   list-style: none;
   margin-right: 50px;
   color: #fff;
 }
-ul a {
+.nav--social ul a {
   color: #fff;
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
@@ -674,4 +676,73 @@ ul a {
   -ms-grid-column: 4;
   -ms-grid-column-span: 1;
   grid-column: 4/5;
+}
+
+.caja--con-fondo {
+  display: block;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  position: relative;
+  overflow: hidden;
+  background-color: #333333;
+}
+.caja--con-fondo img {
+  display: block;
+  max-width: 100%;
+  max-height: auto;
+  position: absolute;
+  opacity: 0.5;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+.caja--con-fondo__contenido {
+  padding: 20px;
+  position: absolute;
+  text-align: center;
+  color: #fff;
+}
+.caja--con-fondo__contenido p {
+  color: #fff;
+}
+.caja--con-fondo__contenido h3 {
+  color: #fff;
+}
+.caja--con-fondo__categoria {
+  display: block;
+  width: auto;
+  max-height: 100px;
+  margin: 0 auto;
+  text-align: center;
+  background-color: #8841da;
+  color: #fff;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.caja--grande {
+  max-width: 1000px;
+  height: 550px;
+  margin-right: 20px;
+}
+.caja--grande h2 {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 50px;
+  font-size: 3.125rem;
+  line-height: 4.6875rem;
+}
+.caja--grande .caja--con-fondo__contenido {
+  padding-top: 200px;
+}
+
+.caja--mediana {
+  max-width: 600px;
+  height: 250px;
+}
+
+.caja--pequena {
+  max-width: 300px;
+  height: 250px;
 }
