style: add styles for stats box

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -746,3 +746,29 @@ main {
   max-width: 300px;
   height: 250px;
 }
+
+.caja--con-fondo__stats {
+  margin: 0 auto;
+  position: absolute;
+  bottom: 10px;
+  border-top: none;
+  text-align: center;
+}
+.caja--con-fondo__stats ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.caja--con-fondo__stats li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 50px;
+  opacity: 0.8;
+}
+.caja--con-fondo__stats i {
+  color: #fff;
+}
+.caja--con-fondo__stats span {
+  color: #fff;
+}
