--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,5 +1,6 @@
 @import '../sass/bootstrap_reboot';
 @import '../sass/_globals';
+@import '../sass/breakpoints';
 @import '../sass/grids';
 @import '../sass/_headers';
 @import '../sass/_footers';
