--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -833,3 +833,34 @@ main {
   margin-right: 20px;
   color: rgba(51, 51, 51, 0.5);
 }
+
+.banner--homepage {
+  max-width: 300px;
+  padding: 50px;
+  margin-bottom: 20px;
+  background-color: #8841da;
+  color: #fff;
+}
+.banner--homepage h3 {
+  font-size: 20px;
+  font-size: 1.25rem;
+  line-height: 1.875rem;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.banner--homepage p {
+  padding-bottom: 30px;
+}
+.banner--homepage .button {
+  padding: 10px;
+  height: 50px;
+  border: 2px solid #fff;
+  border-radius: 40px;
+  font-size: 18px;
+  font-size: 1.125rem;
+  line-height: 1.6875rem;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
