--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -800,6 +800,7 @@ main {
 .sidebar--listado {
   max-width: 300px;
   padding: 20px;
+  max-height: 550px;
   color: #333333;
   -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
