style: rename template file to _template

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -1,4 +1,4 @@
-extends components/template.pug
+extends components/_template.pug
 block content
 	main.contenedor--home
 		+caja--con-fondo-grande ('cyberpunk-2077.jpg', "Destacadas", 'Cyberpunk 2077 tiene tres prólogos distintos', 'En Cyberpunk 2077 los jugadores podrán seleccionar entre tres historias de origen diferentes, cada una presentando una ubicación de partida distinta para su personaje.')
