--- a/assets/sass/components/_boxes.scss
+++ b/assets/sass/components/_boxes.scss
@@ -65,3 +65,30 @@
   max-width: 300px;
   height: 250px;
 }
+
+.contenedor--cajas {
+  width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.caja {
+  max-width: 430px;
+  @include caja();
+  &__contenido {
+    padding: 25px;
+    background-color: $color-claro;
+  }
+
+  span {
+    color: $color-secundario;
+    @include titulos($Fuente2);
+  }
+
+  a {
+    text-decoration: none;
+    color: $color-variacion;
+    @include titulos($Fuente2);
+  }
+}
