feat: add profile page

--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -16,4 +16,8 @@
 
 @import './components/_articles';
 @import './components/_intro';
+
+@import './components/_profile';
+@import './components/_gallery';
+@import './components/_location';
 /****** > components ******/
