--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -790,6 +790,7 @@ main {
   color: #333333;
   -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 .caja__contenido {
   padding: 25px;
@@ -835,6 +836,38 @@ main {
   color: #fff;
 }
 
+.estadistica--perfil {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 50%;
+  height: 90px;
+  padding-top: 15px;
+  margin: 0 auto;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  border-radius: 20px;
+  color: #333333;
+  -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+.estadistica--perfil h3 {
+  font-weight: 600px;
+  font-size: 20px;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.estadistica--perfil span {
+  font-size: 12px;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
 .sidebar--listado {
   max-width: 300px;
   padding: 20px;
@@ -842,6 +875,7 @@ main {
   color: #333333;
   -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 .sidebar--listado h3 {
   font-size: 20px;
@@ -924,6 +958,34 @@ main {
   color: #8841da;
 }
 
+.articulos {
+  width: 50%;
+  padding: 50px 0 0 50px;
+}
+
+.articulo {
+  margin-bottom: 75px;
+  border-bottom: 3px solid #8841da;
+}
+.articulo__categoria {
+  font-weight: 500;
+  font-size: 16px;
+  color: #8841da;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.articulo__titulo {
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.articulo__description {
+  margin-bottom: 30px;
+  padding-right: 100px;
+}
+
 .intro {
   width: 1340px;
   height: 650px;
@@ -934,6 +996,7 @@ main {
   color: #333333;
   -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
 }
 .intro__image {
   width: 1320px;
@@ -990,6 +1053,120 @@ main {
 }
 .intro__autor-titulo {
   color: fade(#fff, 50%);
+}
+
+.perfil {
+  width: 50%;
+  padding-top: 50px;
+  color: #fff;
+  background-color: #8841da;
+}
+.perfil__avatar {
+  display: block;
+  margin: 0 auto;
+  border-radius: 50em;
+}
+.perfil__nombre, .perfil__minibio h2 {
+  text-align: center;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.perfil__titulo, .perfil__minibio h3 {
+  text-transform: uppercase;
+  text-align: center;
+  font-weight: 700;
+  font-size: 12px;
+  color: rgba(255, 255, 255, 0.5);
+}
+.perfil__boton {
+  display: block;
+  width: 100px;
+  height: 40px;
+  margin: 15px auto;
+  padding-top: 6px;
+  border-radius: 20px;
+  text-decoration: none;
+  text-align: center;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: #fff;
+  background-color: rgba(51, 51, 51, 0.2);
+  border: 2px solid rgba(255, 255, 255, 0.3);
+}
+
+.perfil__minibio {
+  margin: 0 auto;
+  padding-top: 20px;
+}
+.galeria {
+  width: 40%;
+  height: 250px;
+  margin: 10px auto;
+  padding: 20px 0 0 30px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  border-radius: 20px;
+  color: #333333;
+  -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+.galeria__foto-principal {
+  float: left;
+  margin-right: 10px;
+}
+.galeria__fotos-adicionales {
+  height: 70px;
+  margin-right: 5px;
+  margin-bottom: 5px;
+}
+.galeria h2 {
+  margin-bottom: 10px;
+  font-weight: 600;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.galeria img {
+  border-radius: 10px;
+}
+
+.ubicacion--perfil {
+  width: 50%;
+  height: 90px;
+  margin: 30px auto 0 auto;
+  padding: 20px 0 0 50px;
+  border-radius: 20px;
+  color: #333333;
+  -webkit-box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: #fff;
+}
+.ubicacion--perfil i {
+  display: block;
+  float: left;
+  padding-right: 10px;
+  font-size: 40px;
+  color: #3f579a;
+}
+.ubicacion--perfil h2 {
+  font-weight: 600px;
+  font-size: 20px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+.ubicacion--perfil h3 {
+  font-size: 12px;
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  font-weight: 700;
+  color: rgba(51, 51, 51, 0.5);
 }
 
 /****** > components ******/
