--- a/assets/sass/config/_globals.scss
+++ b/assets/sass/config/_globals.scss
@@ -10,6 +10,7 @@ $color-claro: #fff;
 @mixin caja {
   color: $color-primario;
   box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
+  background-color: $color-claro;
 }
 
 @mixin titulos($fuente) {
