--- a/pug/components/mixins.pug
+++ b/pug/components/mixins.pug
@@ -86,3 +86,13 @@ mixin caja(imagen, categoria, titulo, contenido)
 			h3=titulo
 			p=contenido
 			a Leer Mas
+
+mixin stats(valor,leyenda)
+	.estadistica_elemento
+		h3=valor
+		span=leyenda
+mixin article(categoria,titulo, descripcion)
+	.articulo
+		span.articulo__categoria=categoria
+		h2.articulo__titulo=titulo
+		p.articulo__descripcion=descripcion
