--- a/assets/sass/index.scss
+++ b/assets/sass/index.scss
@@ -20,4 +20,7 @@
 @import './components/_profile';
 @import './components/_gallery';
 @import './components/_location';
+
+@import './components/_search';
+@import './components/_head_with_filters';
 /****** > components ******/
