--- a/pug/articulo.pug
+++ b/pug/articulo.pug
@@ -6,7 +6,7 @@ block content
 			span.intro__categoria Noticias
 			h1.intro__titulo Cyberpunk 2077 tiene tres prólogos distintos
 		.intro__autor
-			img(src="../assets/images/avatar.jpg")
+			a(href="perfil.html"): img(src="../assets/images/avatar.jpg")
 			span.intro__autor-titulo Autor
 			span.intro__autor-nombre John Wick
 	article.articulo--principal
