--- a/pug/components/header.pug
+++ b/pug/components/header.pug
@@ -1,11 +1,11 @@
 header.header--principal
-	.logo.logo--header: img(src="../assets/images/logo--header.svg")
+	.logo.logo--header: a(href='index.html'): img(src="../assets/images/logo--header.svg")
 	nav.nav--header: ul
 		li: a(href="#") Playstation
 		li: a(href="#") Xbox
 		li: a(href="#") Nintendo
 		li: a(href="#") PC
 		li: a(href="#") Mobile
-	a(href="#" class="header__busqueda")
+	a(href="search.html" class="header__busqueda")
 		i.fas.fa-search
 		span Search
