--- a/pug/components/mixins.pug
+++ b/pug/components/mixins.pug
@@ -14,7 +14,7 @@ mixin caja(imagen, categoria, titulo, contenido)
 			span.caja__categoria=categoria
 			h3=titulo
 			p=contenido
-			a Leer Mas		
+			a(href="articulo.html") Leer Mas		
 mixin caja--estadistica(imagen, category, title, summary)
 	.caja
 		.caja__imagen: img(src="../assets/images/"+imagen)
@@ -26,7 +26,7 @@ mixin caja--estadistica(imagen, category, title, summary)
 
 mixin caja-stats(imagen, category, title, summary)
 	.caja
-		a(href="#",class="caja__imagen"): img(src="../assets/images/"+imagen)
+		a(href="articulo.html",class="caja__imagen"): img(src="../assets/images/"+imagen)
 		.caja__contenido
 			span.caja__categoria=category
 			h3=title
@@ -58,7 +58,7 @@ mixin estadistica--caja-con-fondo
 			span 12
 
 mixin caja--con-fondo-grande (imagen, categoria, titulo, contenido)
-	a(class="caja--con-fondo caja--grande")
+	a(href="articulo.html" class="caja--con-fondo caja--grande")
 		.caja__imagen: img(src="../assets/images/"+imagen)
 		.caja--con-fondo__contenido
 			span.caja--con-fondo__categoria=categoria
@@ -67,7 +67,7 @@ mixin caja--con-fondo-grande (imagen, categoria, titulo, contenido)
 		+estadistica--caja-con-fondo
 
 mixin caja--con-fondo-mediana (clase, imagen, categoria, titulo, contenido)
-	a(class="caja--con-fondo caja--mediana " + clase)
+	a(href="articulo.html" class="caja--con-fondo caja--mediana " + clase)
 		.caja__imagen: img(src="../assets/images/"+imagen)
 		.caja--con-fondo__contenido
 			span.caja--con-fondo__categoria=categoria
@@ -75,7 +75,7 @@ mixin caja--con-fondo-mediana (clase, imagen, categoria, titulo, contenido)
 		+estadistica--caja-con-fondo
 
 mixin caja--con-fondo-pequena (clase, imagen, categoria, titulo, contenido)
-	a(class="caja--con-fondo caja--pequena " + clase)
+	a(href="articulo.html" class="caja--con-fondo caja--pequena " + clase)
 		.caja__imagen: img(src="../assets/images/"+imagen)
 		.caja--con-fondo__contenido
 			span.caja--con-fondo__categoria=categoria
@@ -86,15 +86,6 @@ mixin listado-categoria(numero,titulo)
 	li: a(href="articulo.html")
 		span.sidebar--listado__numero=numero
 		span.sidebar--listado__titulo=titulo
-		
-mixin caja(imagen, categoria, titulo, contenido)
-	.caja
-		.caja__imagen: img(src="../assets/images/"+imagen)
-		.caja__contenido
-			span.caja__categoria=categoria
-			h3=titulo
-			p=contenido
-			a Leer Mas
 
 mixin stats(valor,leyenda)
 	.estadistica_elemento
