--- a/assets/sass/config/_globals.scss
+++ b/assets/sass/config/_globals.scss
@@ -1,45 +1,6 @@
-//Variables
-$Fuente1: 'Lato', sans-serif;
-$Fuente2: 'Oswald', sans-serif;
-$color-primario: #333333;
-$color-secundario: #8841da;
-$color-variacion: #3f579a;
-$color-claro: #fff;
-
-//Mixins
-@mixin caja {
-  color: $color-primario;
-  box-shadow: 0px 20px 33px 0px rgba(0, 0, 0, 0.2);
-  background-color: $color-claro;
-}
-
-@mixin caja-sombra {
-  background-color: $color-claro;
-  box-shadow: 0px 20px 33px 0px rgba(0,0,0,0.10);
-
-}
-
-@mixin titulos($fuente) {
-  @if $fuente ==$Fuente1 {
-    font-family: $Fuente1;
-  } @else {
-    font-family: $Fuente2;
-    text-transform: uppercase;
-    font-weight: 700;
-  }
-}
-
-@mixin contenedor(){
-  display: flex;
-  width: 96%;
-  margin: 0 auto;
-  padding: 30px 0;
-}
-
-// Functions
-@function get-opacity($color, $amount) {
-  @return rgba($color, $amount);
-}
+@import './_variables';
+@import './_functions';
+@import './_mixins';
 
 @each $header, $size in (h1: 30px, h2: 25px, h3: 20px) {
   #{$header} {
@@ -47,17 +8,6 @@ $color-claro: #fff;
     @include titulos($Fuente2);
     margin: 0;
   }
-}
-
-@function calculateRem($size) {
-  $remSize: $size / 16px;
-  @return $remSize * 1rem;
-}
-
-@mixin font-size($size) {
-  font-size: $size;
-  font-size: calculateRem($size);
-  line-height: calculateRem($size) * 1.5;
 }
 
 body {
